--- a/CSS/transitions/transitions.html
+++ b/CSS/transitions/transitions.html
@@ -34,7 +34,6 @@
             border: 1px solid black;
             padding: 4px;
             height: 185px;
-            position: relative;
             transition-property: justify-content;
             transition-duration: 1000ms;
             transition-timing-function: 500ms;
@@ -42,8 +41,7 @@
 
         #opdr3 .container .road{
             margin-bottom: 5px;
-            justify-content: flex-start;
-            
+            justify-content: flex-start;            
         }
 
         #opdr3 .container .road:hover{
@@ -168,7 +166,7 @@
                     </p>
                 </div>
                 <div id="opdr3" class="results">                    
-                    <div class="container flex">
+                    <div class="container">
                         <div class="road flex"><p class="een">1</p></div>
                         <div class="road flex"><p class="twee">2</p></div>
                         <div class="road flex"><p class="drie">3</p></div>
