--- a/CSS/flexbox/flexbox.html
+++ b/CSS/flexbox/flexbox.html
@@ -229,7 +229,6 @@
 
         #opdr9 .card .card_body p{
             font-size: .8em;
-            
         }
         
         #opdr9 .card .card_footer{
@@ -494,7 +493,8 @@
                     </div>
                     <div class="card flex">
                         <div class="card_header">
-                            <img class="static" src="../res/img/mario_paper_maker.jpg" alt="Super Mario Maker"><img class="active" src="../res/img/mario_maker.gif" alt="Super mario maker animation">
+                            <img class="static" src="../res/img/mario_paper_maker.jpg" alt="Super Mario Maker">
+                            <img class="active" src="../res/img/mario_maker.gif" alt="Super mario maker animation">
                         </div>
                         <div class="card_body flex">
                             <h3>Super Mario maker</h3>
