--- a/CSS/transitions/transitions.html
+++ b/CSS/transitions/transitions.html
@@ -136,7 +136,7 @@
             position: absolute;
             /* transition: top 4000ms ease 500ms; */
             /* transition: top 4000ms ease 1000ms, transform 1500ms ease 2000ms, left 500ms ease 1000ms; */
-            transition: top 3000ms ease 1000ms, left 500ms ease 2000ms, transform 1000ms linear 2000ms;
+            transition: top 2000ms ease 500ms, left 500ms ease 2000ms, transform 1000ms linear 1000ms;
         }
 
         #opdr4 .container .block{
@@ -164,7 +164,6 @@
         /* Blok 3 */
         #opdr4 .container:hover #drie{
             transform: translateX(-481px);
-            /* top: 358px; */
         }
 
         /* Opdracht 5 */
@@ -180,7 +179,7 @@
             height: 350px;
             width: 350px;
             position: relative;
-            transition: transform 5000ms ease 500ms;
+            transition: all 3500ms ease-out;
             z-index: 2;
         }
 
@@ -199,6 +198,8 @@
 
         #opdr5 .container:hover .curtain{
             transform: translate(170px, 45px) rotate(30deg);
+            /* background-color: #fff; */
+            /* transform: translate(170px, 45px); */
         }
 
         #opdr5 .container .content{
@@ -218,9 +219,7 @@
             top: 0;
             background-color: red;
             box-sizing: border-box;
-        }
-
-        
+        }        
 
     </style>
 </head>
