--- a/CSS/transitions/transitions.html
+++ b/CSS/transitions/transitions.html
@@ -223,24 +223,37 @@
         }
 
         /* Opdracht 6 */
-        #opdr6 .deck{
-            margin: auto;
-            background-color: #ddd;
+        #opdr6{
             display: flex;
-            justify-content: space-around;
-            height: 500px;
+            justify-content: center;
+        }
+
+        #opdr6 .deck{            
+            width: 900px;
+            height: 350px;
+            background-color: #ddd;            
+            flex-direction: row;
+            justify-content: space-between;
             align-items: center;
         }
 
         #opdr6 .deck .card{
-            padding: 10px;
+            padding: 5px;
             display: flex;
+            border: 1px solid black;
+            border-radius: 10px;
             flex-direction: column;
             justify-content: space-between;
-            border: 1px solid black;
-            height: 350px;
-            width: 200px;
-            border-radius: 10px;
+            height: 250px;
+            width: 150px;
+            background-color: rgba(82, 10, 82, 0.295);
+        }
+
+        #opdr6 .deck .card #one{
+            left: 200px;
+        }
+        #opdr6 .deck .card #two{
+            left: 300px;
         }
 
     </style>
@@ -288,23 +301,6 @@
             <!-- Opdracht 3  -->
             <section>
                 <div class="assignments">
-                    <h3>Opdracht 3</h3>
-                    <p>
-                        Transitions kent verschillende transition-timing. Zie hieronder een voorbeeld. Maak het na.
-                    </p>
-                </div>
-                <div id="opdr3" class="results">                    
-                    <div class="container">
-                        <div id="een" class="road"><p>1</p></div>
-                        <div id="twee" class="road"><p>2</p></div>
-                        <div id="drie" class="road"><p>3</p></div>
-                        <div id="vier" class="road"><p>4</p></div>
-                        <div id="vijf" class="road"><p>5</p></div>
-                    </div>                    
-                </div>
-            </section>
-            <!-- Opdracht 4  -->
-            <section>
                 <div class="assignments">rotate(30deg)ten en maak het ongeveer hetzelfde na.
                     </p>                    
                 </div>
@@ -344,40 +340,50 @@
                 </div>
                 <div id="opdr6" class="results">
                     <div class="deck">
-                        <div class="card">
-                            <div class="card_nr">Lorem, ipsum dolor.</div>
-                            <div class="card_title">
+                        <div id="one" class="card">
+                            <div class="card_head">
+                                <p>Lorem, ipsum dolor.</p>
+                            </div>
+                            <div class="card_body">
                                 <h3>Title of the article</h3>
                             </div>
-                            <div class="card_author">Lorem, ipsum.</div>
+                            <div class="card_footer">Lorem, ipsum.</div>
                         </div>
-                        <div class="card">
-                            <div class="card_nr">Laudantium, quisquam! Quam!</div>
-                            <div class="card_title">
+                        <div id="two" class="card">
+                            <div class="card_head">
+                                <p>Consequatur, veniam eaque.</p>
+                            </div>
+                            <div four class="card_body">
                                 <h3>Title of the article</h3>
                             </div>
-                            <div class="card_author">Hic, ipsum.</div>
+                            <div five class="card_footer">Obcaecati, iure.</div>
                         </div>
-                        <div class="card">
-                            <div class="card_nr">Praesentium, veniam odit!</div>
-                            <div class="card_title">
+                        <div id="three" class="card">
+                            <div class="card_head">
+                                <p>Quam, voluptate beatae?</p>
+                            </div>
+                            <div class="card_body">
                                 <h3>Title of the article</h3>
                             </div>
-                            <div class="card_author">Repudiandae, molestiae.</div>
+                            <div class="card_footer">Amet, corrupti.</div>
                         </div>
-                        <div class="card">
-                            <div class="card_nr">Id, non maiores.</div>
-                            <div class="card_title">
+                        <div id="four" class="card">
+                            <div class="card_head">
+                                <p>Accusantium, harum cupiditate!</p>
+                            </div>
+                            <div class="card_body">
                                 <h3>Title of the article</h3>
                             </div>
-                            <div class="card_author">Dolore, ducimus!</div>
+                            <div class="card_footer">Quibusdam, officia?</div>
                         </div>
-                        <div class="card">
-                            <div class="card_nr">Ad, quibusdam adipisci.</div>
-                            <div class="card_title">
+                        <div id="five" class="card">
+                            <div class="card_head">
+                                <p>Nostrum, tenetur. Soluta.</p>
+                            </div>
+                            <div class="card_body">
                                 <h3>Title of the article</h3>
                             </div>
-                            <div class="card_author">Dicta, omnis.</div>
+                            <div class="card_footer">Ex, voluptate?</div>
                         </div>
                     </div>
                 </div>
