--- a/CSS/Eindopdracht/chefkok.html
+++ b/CSS/Eindopdracht/chefkok.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eindopdracht - CSS | The Chefkok</title>
     <link rel="stylesheet" href="./res/css/chefkok.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    <link href="https://cdn.lineicons.com/2.0/LineIcons.css" rel="stylesheet">
 </head>
+
 <body>
     <div id="wrapper">
         <header>
@@ -21,15 +25,238 @@
             </div>
         </header>
         <main>
-                        
+            <section class="main_container">
+                <!-- OPGEPAST -->
+                <section class="cooking flex">
+                    <div>
+                        <h2>Cooking</h2>
+                        <p>Lorem ipsum enzooo</p>
+                        <button>buy </button>
+                        <button> show more</button>
+                    </div>
+                </section>
+                <div class="populair_dishes flex">
+                    <h2>Populaire gerechten</h2>
+                    <div class="card_container flex">
+                        <div class="card flex">
+                            <div class="card_thumb">
+                                <img src="./res/img/dish1.jpg" alt="Dish image">
+                            </div>
+                            <div class="card_body">
+                                <h3 class="dish_title">Pasta</h3>
+                                <p class="dish_price">&euro; 12,-</p>
+                                <p class="dish_body">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore
+                                    repudiandae blanditiis numquam, nobis praesentium tempora dolores maiores laborum a
+                                    officia amet modi, maxime atque deleniti possimus commodi sed vitae fugit!
+                                </p>
+                            </div>
+                            <div class="card_footer">
+                                <a href="#">
+                                    <p>Show more..</p>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="card flex">
+                            <div class="card_thumb">
+                                <img src="./res/img/dish1.jpg" alt="Dish image">
+                            </div>
+                            <div class="card_body">
+                                <h3 class="dish_title">Pasta</h3>
+                                <p class="dish_price">&euro; 12</p>
+                                <p class="dish_body">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui nihil
+                                    explicabo deleniti id velit, ab ad quos. Mollitia quis quidem ducimus perferendis
+                                    ipsa
+                                    accusantium est in illum ab, consequatur sapiente!</p>
+                            </div>
+                            <div class="card_footer">
+                                <a href="#">
+                                    <p>Show more..</p>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="card flex">
+                            <div class="card_thumb">
+                                <img src="./res/img/dish1.jpg" alt="Dish image">
+                            </div>
+                            <div class="card_body">
+                                <h3 class="dish_title">Pasta</h3>
+                                <p class="dish_price">&euro; 12</p>
+                                <p class="dish_body">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                    Cupiditate,
+                                    numquam aliquam! Dignissimos, labore omnis atque quasi vel, earum eum, dicta amet
+                                    molestiae laborum porro nam molestias necessitatibus at corrupti tempore!</p>
+                            </div>
+                            <div class="card_footer">
+                                <a href="#">
+                                    <p>Show more..</p>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu_container flex">
+                    <h2>Menu</h2>
+                    <div class="content flex">
+                        <div class="cheff_thumb">
+                            <img src="./res/img/chef1.webp" alt="Chef foto">
+                        </div>
+                        <div class="menus border flex">
+                            <div class="menu_item border">
+                                <div class="menu_title">
+                                    <h4>Pasta</h4>
+                                </div>
+                                <div class="menu_desc">
+                                    <p>lorem20</p>
+                                </div>
+                                <div class="menu_price">
+                                    <p>&euro; 18,-</p>
+                                </div>
+                            </div>
+                            <div class="menu_item border">
+                                <div class="menu_title">
+                                    <h4>Pasta</h4>
+                                </div>
+                                <div class="menu_desc">
+                                    <p>lorem20</p>
+                                </div>
+                                <div class="menu_price">
+                                    <p>&euro; 18,-</p>
+                                </div>
+                            </div>
+                            <div class="menu_item border">
+                                <div class="menu_title">
+                                    <h4>Pasta</h4>
+                                </div>
+                                <div class="menu_desc">
+                                    <p>lorem20</p>
+                                </div>
+                                <div class="menu_price">
+                                    <p>&euro; 18,-</p>
+                                </div>
+                            </div>
+                            <div class="menu_item border">
+                                <div class="menu_title">
+                                    <h4>Pasta</h4>
+                                </div>
+                                <div class="menu_desc">
+                                    <p>lorem20</p>
+                                </div>
+                                <div class="menu_price">
+                                    <p>&euro; 18,-</p>
+                                </div>
+                            </div>
+                            <div class="menu_item border">
+                                <div class="menu_title">
+                                    <h4>Pasta</h4>
+                                </div>
+                                <div class="menu_desc">
+                                    <p>lorem20</p>
+                                </div>
+                                <div class="menu_price">
+                                    <p>&euro; 18,-</p>
+                                </div>
+                            </div>
+                            <div class="menu_item border">
+                                <div class="menu_title">
+                                    <h4>Pasta</h4>
+                                </div>
+                                <div class="menu_desc">
+                                    <p>lorem20</p>
+                                </div>
+                                <div class="menu_price">
+                                    <p>&euro; 18,-</p>
+                                </div>
+                            </div>
+                            <div class="menu_item border">
+                                <div class="menu_title">
+                                    <h4>Pasta</h4>
+                                </div>
+                                <div class="menu_desc">
+                                    <p>lorem20</p>
+                                </div>
+                                <div class="menu_price">
+                                    <p>&euro; 18,-</p>
+                                </div>
+                            </div>
+                            <div class="menu_item border">
+                                <div class="menu_title">
+                                    <h4>Pasta</h4>
+                                </div>
+                                <div class="menu_desc">
+                                    <p>lorem20</p>
+                                </div>
+                                <div class="menu_price">
+                                    <p>&euro; 18,-</p>
+                                </div>
+                            </div>
+                            <div class="menu_item border">
+                                <div class="menu_title">
+                                    <h4>Pasta</h4>
+                                </div>
+                                <div class="menu_desc">
+                                    <p>lorem20</p>
+                                </div>
+                                <div class="menu_price">
+                                    <p>&euro; 18,-</p>
+                                </div>
+                            </div>
+                            <div class="menu_item border">
+                                <div class="menu_title">
+                                    <h4>Pasta</h4>
+                                </div>
+                                <div class="menu_desc">
+                                    <p>lorem20</p>
+                                </div>
+                                <div class="menu_price">
+                                    <p>&euro; 18,-</p>
+                                </div>
+                            </div>
+                            <div class="menu_item border">
+                                <div class="menu_title">
+                                    <h4>Pasta</h4>
+                                </div>
+                                <div class="menu_desc">
+                                    <p>lorem20</p>
+                                </div>
+                                <div class="menu_price">
+                                    <p>&euro; 18,-</p>
+                                </div>
+                            </div>
+                            <div class="menu_item border">
+                                <div class="menu_title">
+                                    <h4>Pasta</h4>
+                                </div>
+                                <div class="menu_desc">
+                                    <p>lorem20</p>
+                                </div>
+                                <div class="menu_price">
+                                    <p>&euro; 18,-</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
-        <footer>
-            
+        <footer class="flex">
+            <div class="footer">
+                <h3> Contact </h3>
+                <p>Osdorpplein 16</p>
+                <p>1234 AB Amsterdam</p>
+                <p>Tel.nr: 0612345678</p>
+                <p>Openingstijden ma t/m vr 10:00 t/m 22:00</p>
+                <i class="lni lni-instagram"></i>
+                <i class="lni lni-twitter-original"></i>
+                <i class="lni lni-facebook-original"></i>
+            </div>
+            <div class="footernav">
+                <h3>Navigation</h3>
+                <a href="#home">News</a>
+                <a href="#menu">Contact</a>
+                <a href="#contact">About</a>
+            </div>
         </footer>
-    </div>    
+    </div>
 </body>
+
 </html>
-<!-- 
-
-
- -->
