Update - Eindopdracht CSS

--- a/CSS/Eindopdracht/chefkok.html
+++ b/CSS/Eindopdracht/chefkok.html
@@ -30,7 +30,7 @@
                 <section class="cooking flex">
                     <div>
                         <h2>Cooking</h2>
-                        <p>Lorem ipsum enzooo</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, molestiae.</p>
                         <button>buy </button>
                         <button> show more</button>
                     </div>
@@ -42,7 +42,7 @@
                             <div class="card_thumb">
                                 <img src="./res/img/dish1.jpg" alt="Dish image">
                             </div>
-                            <div class="card_body">
+                            <div class="card_body flex">
                                 <h3 class="dish_title">Pasta</h3>
                                 <p class="dish_price">&euro; 12,-</p>
                                 <p class="dish_body">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore
@@ -60,7 +60,7 @@
                             <div class="card_thumb">
                                 <img src="./res/img/dish1.jpg" alt="Dish image">
                             </div>
-                            <div class="card_body">
+                            <div class="card_body flex">
                                 <h3 class="dish_title">Pasta</h3>
                                 <p class="dish_price">&euro; 12</p>
                                 <p class="dish_body">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui nihil
@@ -78,7 +78,7 @@
                             <div class="card_thumb">
                                 <img src="./res/img/dish1.jpg" alt="Dish image">
                             </div>
-                            <div class="card_body">
+                            <div class="card_body flex">
                                 <h3 class="dish_title">Pasta</h3>
                                 <p class="dish_price">&euro; 12</p>
                                 <p class="dish_body">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
