--- a/CSS/Eindopdracht/chefkok.html
+++ b/CSS/Eindopdracht/chefkok.html
@@ -27,17 +27,17 @@
         <main>
             <section class="cooking flex">
                 <img src="./res/img/cooking.jpg" alt="Cooking image">
-                <div class="cooking_content">
+                <div class="cooking_content flex">
                     <h2>Cooking</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, molestiae.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam nam facilis aliquid expedita. Aspernatur, voluptas!</p>
                     <div class="cooking_btns flex">
-                        <div class="button">buy</div>
-                        <div class="button">show more</div>
+                        <a href="#"><div class="button"><p>buy</p></div></a>
+                        <a href="#"><div class="button"><p>show more</p></div></a>
                     </div>
                 </div>
                     
             </section>
-            <section class="main_container">                
+            <section class="main_container ">                
                 <div class="populair_dishes flex">
                     <h2>Populaire gerechten</h2>
                     <div class="card_container flex">
@@ -103,14 +103,23 @@
                         </div>
                     </div>
                 </div>
-                <div class="menu_container flex">
+                <div class="menu_container ">
                     <h2>Menu</h2>
-                    <div class="content flex">
-                        <div class="cheff_thumb">
+                    <div class="content  flex">
+                        <div class="chef_thumb flex">
                             <img src="./res/img/chef1.webp" alt="Chef foto">
                         </div>
                         <div class="menus flex">
-                            <div class="menu_item">
+                            <div class="menu_item ">
+                                <div class="menu_head flex">
+                                    <h3 class="menu_title">Pasta</h3>
+                                    <p class="menu_price">&euro; 18,-</p>
+                                </div>                                
+                                <div class="menu_desc">
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis fugiat architecto vel dolor aliquid accusantium, ea ipsa delectus optio id?</p>
+                                </div>                                
+                            </div>
+                            <div class="menu_item ">
                                 <div class="menu_head flex">
                                         <h3 class="menu_title">Pasta</h3>
                                     <div class="menu_price">
@@ -121,18 +130,7 @@
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis fugiat architecto vel dolor aliquid accusantium, ea ipsa delectus optio id?</p>
                                 </div>                                
                             </div>
-                            <div class="menu_item">
-                                <div class="menu_head flex">
-                                        <h3 class="menu_title">Pasta</h3>
-                                    <div class="menu_price">
-                                        <p>&euro; 18,-</p>
-                                    </div>
-                                </div>                                
-                                <div class="menu_desc">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis fugiat architecto vel dolor aliquid accusantium, ea ipsa delectus optio id?</p>
-                                </div>                                
-                            </div>
-                            <div class="menu_item">
+                            <div class="menu_item ">
                                 <div class="menu_head flex">
                                         <h3 class="menu_title">Pasta</h3>
                                     <div class="menu_price">
@@ -247,9 +245,9 @@
                 </div>
             </section>
         </main>
-        <footer class="flex">
+        <footer class="flex ">
             <div class="footer">
-                <h3> Contact </h3>
+                <h3>Contact</h3>
                 <p>Osdorpplein 16</p>
                 <p>1234 AB Amsterdam</p>
                 <p>Tel.nr: 0612345678</p>
@@ -267,5 +265,4 @@
         </footer>
     </div>
 </body>
-
 </html>
