Index Update - Vacay mode

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                                
             </nav>
         </header>
-        <main>
+        <main class="container">
             <div class="jumbotron">
                 <h1>Web Development Course - Techgrounds - U. Kirindongo</h1>
                 <p>
@@ -24,8 +24,10 @@
             
             <ul>
                 <li><a href="./HTML/index.html"><img class="badge" src="./resources/img/HTML5_logo_and_wordmark.svg" alt="HTML 5 Logo"></a></li>
-                <li><a href=""><img src="" alt=""></a></li>
-                <li><a href=""><img src="" alt=""></a></li>
+                <li><a href="./CSS/index.html"><img class="badge" src="./resources/img/css3.svg" alt="CSS Logo"></a></li>
+                <li><a href="./SCSS/index.html"><img class="badge" src="./resources/img/sass-seeklogo.com.svg" alt="SaSS Logo"></a></li>
+                <li><a href="./Bootstrap/index.html"><img class="badge" src="./resources/img/bootstrap-seeklogo.com.svg" alt="Bootstrap Logo"></a></li>
+                <li><a href="./JavaScript/index.html"><img class="badge" src="./resources/img/javascript.svg" alt="JavaScript Logo"></a></li>
             </ul> 
         </main>
         <footer>
