--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SCSS (Sass) Overview - Week 3</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Bootstrap Overview - Week 4</title>
 </head>
 <body>
     <div id="wrapper">
